k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-playground
  labels:
    app: k8s-playground
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: k8s-playground
