k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-playground-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8s-playground-server.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-playground
                port:
                  number: 80
